--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -127,7 +127,7 @@
                             <li>Basic API requests with Python</li>
                         </ol>
                     </section>
-                    <section id="PromtEngineering" data-hours="4" data-wip>
+                    <section id="PromtEngineering" data-hours="4">
                         <h3>Prompt Engineering</h3>
                         <ol>
                             <li>System prompt, context, constraints</li>
