--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -141,11 +141,10 @@
 
                 <article>
                     <h1>Vibe Coding</h1>
-                    <section id="VibeCoding" data-hours="4" data-wip>
+                    <section id="VibeCoding" data-hours="4">
                         <h3>Vibe Coding with AI assistants</h3>
                         <ol>
-                            <li>What VibeCoding is. Overview of the ecosystem: Replit, Bolt, Windsurf, ChatGPT, GitHub
-                                Copilot, Cursor, Claude Code</li>
+                            <li>What VibeCoding is. Overview of the ecosystem: Replit, Bolt, GitHub Copilot, Cursor, Claude Code, Google Antigravity</li>
                             <li>Techniques for effective collaboration with AI when generating and refactoring code</li>
                             <li>Validating generated code and identifying errors</li>
                         </ol>
