add more meaning to id

--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -153,8 +153,8 @@
 
                 <article>
                     <h1>Build and deploy your AI Assistant</h1>
-                    <section id="Project2_Assistant" data-hours="4" data-wip>
-                        <h3>Project 2: AI Assistant</h3>
+                    <section id="Project2_BuildAIAssistant" data-hours="4" data-wip>
+                        <h3>Project 2: Build AI Assistant</h3>
                         <ol>
                             <li>Training an ML model for Sentiment Analysis</li>
                             <li>Designing the logic: connecting the ML model with ChatGPT for contextual responses</li>
