--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -153,17 +153,17 @@
 
                 <article>
                     <h1>Build and deploy your AI Assistant</h1>
-                    <section id="Project2_BuildAIAssistant" data-hours="4" data-wip>
+                    <section id="Project2_BuildAIAssistant" data-hours="4">
                         <h3>Project 2: Build AI Assistant</h3>
                         <ol>
-                            <li>Training an ML model for Sentiment Analysis</li>
-                            <li>Designing the logic: connecting the ML model with ChatGPT for contextual responses</li>
-                            <li>Individual Mentoring: implementing dynamic logic (Python)</li>
+                            <li>Building a Chatbot with Gemini API, Transformers, Ollama</li>
+                            <li>Designing the logic: connecting the ML model with ChatGPT/Gemini API for contextual responses</li>
+                            <li>Implementing the logic</li>
                             <li>Testing and fine-tuning the chatbot based on user sentiment</li>
                         </ol>
                     </section>
-                    <section id="BuildUI" data-hours="2" data-wip>
-                        <h3>Build User Interface (UI)</h3>
+                    <section id="BuildUI_with_Streamlit" data-hours="2">
+                        <h3>Build User Interface (UI) with Streamlit</h3>
                         <ol>
                             <li>Introduction to Streamlit for a web interface</li>
                             <li>Implementing the UI and connecting it to the AI logic</li>
@@ -184,10 +184,7 @@
                     <section id="Module11_FinalProject" data-hours="4" data-wip>
                         <h3>Final Project and Portfolio</h3>
                         <ol>
-                            <li>Selecting and planning your own idea for an AI Assistant (with instructor support)</li>
-                            <li>Individual/Group Work on the project and mentoring</li>
-                            <li>Preparing the presentation</li>
-                            <li>Presenting the final projects</li>
+                            <li>Selecting and planning your own idea for an AI Assistant (with instructor support)</li>                            
                         </ol>
                     </section>
                     <section id="PortfolioAndCvTips" data-hours="2" data-wip>
