--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -169,7 +169,7 @@
                             <li>Implementing the UI and connecting it to the AI logic</li>
                         </ol>
                     </section>
-                    <section id="Deploiment" data-hours="2" data-wip>
+                    <section id="Deploiment" data-hours="2">
                         <h3>Cloud Deployment</h3>
                         <ol>
                             <li>Preparing for deployment: <code>requirements.txt</code>, dependency management</li>
