--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -162,7 +162,7 @@
                             <li>Testing and fine-tuning the chatbot based on user sentiment</li>
                         </ol>
                     </section>
-                    <section id="BuildUI_with_Streamlit" data-hours="2">
+                    <section id="BuildUI_with_Streamlit" data-hours="4">
                         <h3>Build User Interface (UI) with Streamlit</h3>
                         <ol>
                             <li>Introduction to Streamlit for a web interface</li>
@@ -181,16 +181,22 @@
 
                 <article>
                     <h1>Course project and Portfolio </h1>
-                    <section id="Module11_FinalProject" data-hours="4" data-wip>
+                    <section id="FinalProjectAndPortfolio" data-hours="2" data-wip>
                         <h3>Final Project and Portfolio</h3>
                         <ol>
-                            <li>Selecting and planning your own idea for an AI Assistant (with instructor support)</li>                            
+                            <li>Selecting and planning your AI Assistant</li>
+                            <li>Building the end-to-end ML lifecycle</li>
+                            <li>Modern AI tools for rapid prototyping (Vibe Coding)</li>
+                            <li>Documentation, README, and project architecture</li>
                         </ol>
                     </section>
                     <section id="PortfolioAndCvTips" data-hours="2" data-wip>
                         <h3>Discuss your portfolio and CV tips</h3>
                         <ol>
-                            <li>Tips for CV, LinkedIn and building an AI portfolio</li>
+                            <li>Building a compelling AI/ML Portfolio (GitHub, Personal Website)</li>
+                            <li>CV best practices for AI Engineers in 2025/2026</li>
+                            <li>LinkedIn optimization and networking</li>
+                            <li>Interview preparation for AI roles</li>
                         </ol>
                     </section>
                 </article>
@@ -206,10 +212,10 @@
                         <h3><a href="/ProgressBG-ChatGPT_and_ML-Slides/pages/readings/UsefulResources.html">Online
                                 Resources</a></h3>
                     </section>
-                    <section id="moreExercises" data-hours="0" data-wip>
+                    <!-- <section id="moreExercises" data-hours="0" data-wip>
                         <h3><a href="/ProgressBG-ChatGPT_and_ML-Slides/pages/themes/Appendix/MoreTasks/moreTasks.html">Additional
                                 Exercises</a></h3>
-                    </section>
+                    </section> -->
                 </article>
 
             </div>
